@@ -2414,6 +2414,9 @@ PHP                                                                        NEWS
   . Fixed bug #71972 (Cyclic references causing session_start(): Failed to
     decode session object). (Laruence)
 
+- COM:
+  . Fixed bug #77177 (Serializing or unserializing COM objects crashes). (cmb)
+
 - Sockets:
   . Added socket_export_stream() function for getting a stream compatible
     resource from a socket resource. (Chris Wright, Bob)
